Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "name = \"art vandelay\" # \"ART VANDELAY\"\n",
+    "name = \"art vandelay\" # \"ART VANDELAY\"r\n",
     "name.upper()"
    ]
   },
