--- a/index.ipynb
+++ b/index.ipynb
@@ -86,8 +86,7 @@
     }
    ],
    "source": [
-    "name = \"art vandelay\" # \"ART VANDELAY\"r\n",
-    "name.upper()"
+    "name = \"art vandelay\" # \"ART VANDELAY\"\n"
    ]
   },
   {
