Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,11 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"art vandelay\" # \"ART VANDELAY\"\n"
+    "name = \"art vandelay\" # \"ART VANDELAY\"\n",
+    "name"
    ]
   },
   {
